# memfd-ed25519

./: .gitignore  Cargo.toml  Makefile  README.md
src/: app.c  main.rs  make_signature.rs
